<resources>
    <string name="app_name">KDU Survey System</string>
    <string name="username">Username</string>
    <string name="fullname">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="teaching_survey">TEACHING SURVEY</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="show_password">Show Password</string>
    <string name="survey_details">SURVEY DETAILS</string>
    <string name="fragment_survey_subject">Subject: </string>
    <string name="fragment_survey_lecturer">Lecturer: </string>
    <string name="fragment_survey_school">School: </string>
    <string name="fragment_survey_date">Creation Date: </string>
    <string name="fragment_survey_student_list">Listed Student</string>
    <string name="fragment_survey_sem">Semester: </string>
    <string name="fragment_survey_select_semester_period">Please select a semester period</string>
    <string name="fragment_survey_respond_overview">Respond Overview</string>
    <string name="fragment_survey_total_score_of_each_question">Total score of each question</string>
    <string name="fragment_survey_total_score_of_each_rating">Total score of each rating</string>
    <string name="fragment_survey_subjective_response">Subjective Respond</string>

    //toolbar
    <string name="add">Add a data</string>
    <string name="sort">Sort</string>
    <string name="search">Search</string>
    <string name="option">Option</string>
    <string name="search_hint">Search...</string>

    //button
    <string name="confirm">CONFIRM</string>
    <string name="update_database">Update Database</string>
    <string name="okay">OKAY</string>
    <string name="cancel">CANCEL</string>

    //data creation dialog
    <string name="lecturer_email_label">\@kdu.edu.my</string>
    <string name="lecturer_data_creation_success">LECTURER DATA SUCCESSFULLY CREATED</string>
    <string name="lecturer_data_creation_fail">LECTURER DATA CREATION FAILED</string>
    <string name="school_name">School Name\nEg: School of Computing and Creative Media</string>
    <string name="school_data_creation_success">SCHOOL DATA SUCCESSFULLY CREATED</string>
    <string name="school_data_creation_fail">SCHOOL DATA CREATION FAILED</string>
    <string name="subject_name">Subject Name\nEg: Fundamentals of Programming</string>
    <string name="subject_category">Subject Category</string>
    <string name="subject_department">Subject Department</string>
    <string name="subject_code">Subject Code</string>
    <string name="subject_data_creation_success">SUBJECT DATA SUCCESSFULLY CREATED</string>
    <string name="subject_data_creation_fail">SUBJECT DATA CREATION FAILED</string>
    <string name="student_name">Student Name</string>
    <string name="student_id">Student ID\nEg: 0101234</string>
    <string name="student_data_creation_success">STUDENT DATA SUCCESSFULLY CREATED</string>
    <string name="student_data_creation_fail">STUDENT DATA CREATION FAILED</string>
    <string name="programme_name">Programme Name\nEg: Diploma in Computer Studies</string>
    <string name="programme_data_creation_success">PROGRAMME DATA SUCCESSFULLY CREATED</string>
    <string name="programme_data_creation_fail">PROGRAMME DATA CREATION FAILED</string>
    <string name="survey_data_creation_success">SURVEY DATA SUCCESSFULLY CREATED</string>
    <string name="survey_data_creation_fail">SURVEY DATA CREATION FAILED</string>

    //drawer
    <string name="drawer_open">OPEN</string>
    <string name="drawer_close">CLOSE</string>
    <string name="lecturer">LECTURER</string>
    <string name="student">STUDENT</string>
    <string name="school">SCHOOL/DEPARTMENT</string>
    <string name="subject">SUBJECT</string>
    <string name="programme">PROGRAMME</string>
    <string name="survey_list">SURVEY LIST</string>
    <string name="drawer_item_settings">SETTINGS</string>
    <string name="drawer_item_home">HOME</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="store">STORE</string>
    <string name="history">HISTORY</string>
    <string name="manage_store">MANAGE STORE</string>
    <string name="leaderboard">Leaderboard</string>

    //sort list
    <string-array name="sort_array">
        <item>A-Z</item>
        <item>Z-A</item>
        <item>Latest</item>
        <item>Earliest</item>
    </string-array>

    //survey creation dialog month
    <string-array name="survey_creation_month_array">
        <item>Jan</item>
        <item>May</item>
        <item>September</item>
    </string-array>

    //survey creation dialog year
    <string-array name="survey_creation_year_array">
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>

</resources>

