<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/kdu_blue"
              android:gravity="center">

    <EditText
        android:layout_marginTop="5dp"
        android:layout_gravity="center"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:id="@+id/lecturer_dialog_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/email_address"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:layout_gravity="center"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginTop="5dp"
        android:id="@+id/lecturer_dialog_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textPassword"
        android:layout_marginLeft="30dp"
        android:hint="@string/password"/>

        <ImageButton
            android:contentDescription="@string/show_password"
            android:layout_marginRight="30dp"
            android:layout_weight="3"
            android:src="@drawable/eye_sight"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lecturer_dialog_show_password"
            android:background="?attr/actionBarItemBackground"/>

    </LinearLayout>

    <EditText
        android:layout_gravity="center"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginTop="10dp"
        android:id="@+id/lecturer_dialog_fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/fullname"/>

    <EditText
        android:layout_gravity="center"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:layout_marginTop="10dp"
        android:id="@+id/lecturer_dialog_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/username"/>

    <requestFocus />

</LinearLayout>