<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/kdu_blue">

        <TextView
            android:layout_marginLeft="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/survey_details"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout

            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
    <TextView
        android:layout_marginLeft="12dp"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_kdu_blue"
        android:textSize="16dp"
        android:text="@string/fragment_survey_subject"/>

            <TextView
                android:id="@+id/fragment_survey_code_category"
                android:layout_marginRight="12dp"
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_kdu_blue"
                android:textSize="16dp"/>

        </LinearLayout>

        <TextView
            android:layout_marginLeft="12dp"
            android:layout_marginTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_kdu_blue"
            android:textSize="16dp"/>

    </LinearLayout>

        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_marginLeft="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_kdu_blue"
                android:textSize="16dp"
                android:text="@string/fragment_survey_lecturer"/>

        </LinearLayout>
        <TextView
            android:layout_marginTop="6dp"
            android:id="@+id/fragment_survey_lecturer"
            android:layout_marginLeft="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_kdu_blue"
            android:textSize="16dp"/>

        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_marginLeft="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_kdu_blue"
                android:textSize="16dp"
                android:text="@string/fragment_survey_school"/>

        </LinearLayout>

        <TextView
            android:layout_marginTop="6dp"
            android:id="@+id/fragment_survey_school"
            android:layout_marginLeft="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_kdu_blue"
            android:textSize="16dp"/>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_marginLeft="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_kdu_blue"
            android:textSize="16dp"
            android:text="@string/fragment_survey_sem"/>

        <TextView
            android:id="@+id/fragment_survey_sem"
            android:layout_marginLeft="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_kdu_blue"
            android:textSize="16dp"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_marginLeft="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_kdu_blue"
                android:textSize="16dp"
                android:text="@string/fragment_survey_date"/>

            <TextView
                android:id="@+id/fragment_survey_date"
                android:layout_marginLeft="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/dark_kdu_blue"
                android:textSize="16dp"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/border_kdu_blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/kdu_blue">

        <TextView
            android:layout_marginLeft="6dp"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/fragment_survey_student_list"/>

    </LinearLayout>
    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
                                            android:scrollbars="vertical"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:id="@+id/fragment_survey_recycler_view">
    </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/kdu_blue"></LinearLayout>
        <LinearLayout
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
            android:id="@+id/fragment_subject_data_edit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:background="@color/kdu_blue"
            android:layout_weight="1"
            android:text="@string/okay"/>

        <Button
            android:text="@string/cancel"
            android:layout_weight="1"
            android:id="@+id/fragment_subject_data_cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:textSize="16dp"
            android:textColor="@color/white"
            android:background="@color/kdu_blue"/>

    </LinearLayout>
    </LinearLayout>

</LinearLayout>