<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <LinearLayout
        android:background="@drawable/kdu_glenmarie_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_centerInParent="true"
                android:visibility="gone"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/kdu_blue">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/dark_kdu_blue">

        <TextView
            android:layout_gravity="center_horizontal"
            android:textSize="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"/>
        </LinearLayout>

        <EditText
            android:textColor="@color/white"
            android:layout_marginTop="30dp"
            android:hint="@string/email_address"
            android:textColorHint="@color/white"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:id="@+id/email_edit_Text"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:typeface="sans"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:typeface="sans"
                android:textStyle="normal"
                android:hint="@string/password"
                android:textColorHint="@color/white"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_marginLeft="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:id="@+id/password_edit_text"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"/>

            <ImageButton
                android:layout_marginRight="30dp"
                android:layout_weight="3"
                android:contentDescription="@string/show_password"
                android:src="@drawable/eye_sight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_show_password"
                android:background="?attr/actionBarItemBackground"/>

        </LinearLayout>

        <Button
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/login_button"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/round_button_white"
            android:textColor="@color/sky_blue"/>

    </LinearLayout>


</LinearLayout>